# kodi-telegram-bot

./: .coverage  .env.example  .gitignore  AGENTS.md  Readme.md  config.py  filemanager.py  kodi.py  kodiremote.py  kodirestart.py  logger.py  main.py  organizer.py  pyproject.toml  renovate.json  requirements.txt  setup.sh  throttle.py  utils.py
.github/workflows/: quality.yml
downloader/: __init__.py  buttons.py  ids.py  list_commands.py  manager.py  progress.py  queue.py  state.py
tests/: conftest.py  test_access_control.py  test_active_duplicate_reply.py  test_bugfixes.py  test_bulk_queue_positions.py  test_concurrency_and_fallback.py  test_config_validate.py  test_filemanager.py  test_filemanager_handlers.py  test_ids.py  test_kodi_module.py  test_kodiremote.py  test_kodiremote_handlers.py  test_kodirestart.py  test_kodirestart_handlers.py  test_list_commands_handlers.py  test_logger_features.py  test_logger_truncation.py  test_main_cleanup_partials.py  test_main_coverage.py  test_manager_download_flow.py  test_manager_handlers.py  test_manager_space_and_post.py  test_message_tracking.py  test_organizer.py  test_progress_rate_limiter.py  test_queue.py  test_queue_cancel_and_buttons.py  test_queue_renumber_and_concurrency.py  test_queued_duplicate_handler.py  test_resource_monitor.py  test_state_and_retry.py  test_throttle.py  test_utils_coverage.py  test_utils_extra.py
