[project]
name = "kodi-telegram-bot"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # bugbear
    "SIM",  # simplify
    "RUF",  # ruff-specific
    "BLE",  # blind-except
    "C4",   # comprehensions
    "T20",  # print statements
    "PIE",  # misc lints
]
ignore = [
    "E501",   # line length handled by formatter
    "T201",   # allow print() — bot uses stdout logging
    "BLE001", # allow blind except in existing Telegram callback handlers
]

[tool.ruff.lint.isort]
known-first-party = ["config", "kodi", "utils", "organizer", "logger", "downloader", "filemanager"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.coverage.run]
source = ["."]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true
