[project]
name = "kodi-telegram-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "telethon==1.43.0",
    "requests==2.33.1",
    "psutil==7.2.2",
    "python-dotenv==1.2.2",
    "cryptg==0.5.2",
    "pillow==12.2.0",
    "aiohttp==3.13.5",
    "hachoir==3.3.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "mypy==1.20.0",
    "ruff==0.15.10",
    "types-requests==2.33.0.20260408",
    "pre-commit==4.5.1",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # bugbear
    "SIM",  # simplify
    "RUF",  # ruff-specific
    "BLE",  # blind-except
    "C4",   # comprehensions
    "T20",  # print statements
    "PIE",  # misc lints
]
ignore = [
    "E501",   # line length handled by formatter
    "T201",   # allow print() — bot uses stdout logging
    "BLE001", # allow blind except in existing Telegram callback handlers
]

[tool.ruff.lint.isort]
known-first-party = ["config", "kodi", "kodiremote", "kodirestart", "utils", "organizer", "logger", "downloader", "filemanager", "throttle"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.coverage.run]
source = ["."]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true
